# music-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  mp3.rs
