[package]
name = "music-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.16.0"
crossterm = { version = "0.25", features = [ "serde" ] }
tui = {version = "0.19.0" , default-features = false, features = ['crossterm', 'serde']}
serde = { version = "1", optional = true, features = ["derive"]}
